<resources>

    <!--App strings-->
    <string name="app_name">Skywalker.gr</string>
    <string name="welcome_message">Find your dream job</string>
    <string name="logo">Logo</string>
    <string name="home_screen">Home Screen</string>
    <!--App strings-->
    <string name="title_activity_normal_app_bar_layout">NormalAppBarLayoutActivity</string>
    <string name="title_activity_spring_app_bar_layout">SpringAppBarLayoutActivity</string>
    <string name="title_activity_spring_app_bar_tab_layout">SpringAppBarLayoutTabActivity</string>
    <string name="title_activity_app_bar_fling_layout">AppBarFlingFixTabActivity</string>


    <!--User strings-->

    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password1">Password</string>
    <string name="login_now">Login Now</string>
    <string name="sign_up_now">Join Now</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="address">Address</string>
    <string name="sign_up">Create my account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="surname">Surname</string>
    <string name="post_code">Postal Code</string>


    <string name="first_name">Type your name</string>
    <string name="physical_address">Type your street address</string>
    <string name="postal_code">Type your postal code</string>
    <string name="email_address">Type your email address</string>
    <string name="last_name">Type your last name</string>
    <string name="password">Type your password</string>
    <string name="retype_password">Retype Password</string>


    <string name="facebook_logo">Facebook Logo</string>
    <string name="google_logo">Google Logo</string>
    <string name="linkedin">LinkedIn Logo</string>


    <string name="i_agree_to_the_terms_and_conditions">I Agree to the Terms &amp; Conditions and Privacy Policy</string>
    <string name="or_sign_up_using_social_media">Or Register using Social Media?</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="new_user_register_now">Join now</string>
    <string name="or_use_social_media">Sign up with</string>
    <string name="linkedin_logo">Linkedin Logo</string>
    <string name="new_user">New user?</string>
    <string name="skip">Skip</string>
    <string name="username_or_password_incorrect">The username or password is incorrect!</string>
    <string name="success_registration">You have successfully registered. Please check your email account to complete the registration!</string>
    <string name="email_exist">This email already exists.</string>
    <string name="fail_registration">Registration Failed!</string>
    <string name="login_success">You have signed in, successfully!</string>


    <!--Toast messages Log in-->
    <string name="fill_username_password">You must fill in, the email and password!</string>

    <!--Toast messages Sign Up-->
    <string name="fill_name">You did not enter a name!</string>
    <string name="fill_surname">You did not enter a surname!</string>
    <string name="fill_email">You did not enter an email!</string>
    <string name="fill_address">You did not enter an address!</string>
    <string name="fill_postcode">You did not enter a postal code!</string>
    <string name="fill_password">You did not enter a password!</string>
    <string name="fill_confirmation">You did not enter the password\'s confirmation!</string>
    <string name="check_terms_conditions">You must accept the terms &amp; conditions and privacy policy!</string>
    <string name="wrong_repassword">Password\'s confirmation is not the same with password!</string>
    <string name="menu">menu</string>
    <string name="test">Test</string>
    <string name="settings">settings</string>
    <string name="back">Back</string>

    <!--Messages General-->
    <string name="terms_and_conditions">Before continuing in Skywalker.gr, make sure that you read
        and agree to our Terms &amp; Conditions and our Privacy policy.</string>
    <string name="search">search</string>
    <string name="welcome_text">Welcome </string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="server_error">Server is down, please try again later</string>
    <string name="no_internet">No internet access, please connect to the network!</string>
    <string name="general_error">Something wrong happened, please try again later!</string>
    <string name="loading">Loading...</string>
    <string name="required_login">You must sign in!</string>

    <!-- Preference Titles -->
    <string name="settings_about">About</string>
    <string name="summary_about">Through <b>skywalker.gr</b> you are not obliged to have an account in order to look for a job application.
        Being the biggest job site in Greece this app was created by our savy tech team in order to cover your needs.
        You can use its services for free and those include:
       \n nSending your CV directly to companies that are of your interest
        \n Creating a personal profile with your CV
       \n Advanced searching of Job Ads
        \n Save your job ads for later review
       \nConnect through social media.
      \n Glad to Help in anyway!</string>
    <string name="settings_security_and_privacy">Security and Privacy</string>
    <string name="settings_profile">Profile</string>
    <string name="settings_language_and_region">Language and Region(Future Update)</string>
    <string name="settings_account">Account</string>
    <string name="settings_resume">Resume</string>
    <string name="settings_notification">Notifications (Future Update)</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_terms_and_conditions">Terms and Conditions</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.skywalker.gr/elGR/static/faq</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.skywalker.gr/elGR/static/politiki-aporritou</string>
    <string name="settings_build_version">Build version</string>
    <string name="settings_category">Settings</string>
    <string name="information_about_preference">Information</string>
    <string name="SecurityAndPrivacySummary">You control your profile\'s appearance.\n
        The limits you set here affect how your profile appears on search engines &amp; permitted services.</string>
    <string name="view_public_profile_title">Public Profile</string>
    <string name="view_public_profile_summary">View your public profile</string>
    <string name="url_public_profile_preview">https://www.skywalker.gr/elGR/users/view-public-profile/</string>
    <string name="profile_image">profile_image</string>


    <string name="type_your_surname">Type your Surname</string>
    <string name="button_save">Save</string>
    <string name="area">Area</string>
    <string name="country">Country</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="marital_status">Marital Status</string>
    <string name="all_checked">Privacy on</string>
    <string name="all_unchecked">Privacy off</string>
    <string name="edit_privacy">Edit your Public Profile</string>
    <string name="success_changes_privacy">Privacy changed successfully!</string>

    <string name="public_permissions">Public</string>
    <string name="private_permissions">Private</string>
    <string-array name="privacy_items">
        <item>View in CV search</item>
        <item>Work Area of interest</item>
        <item>Job positions of interest</item>
        <item>Work experience</item>
        <item>Education</item>
        <item>Foreign Languages</item>
        <item>Computer knowledge</item>
        <item>Seminars</item>
        <item>CV Profile Picture</item>
        <item>CV files</item>
        <item>Other knowledge</item>
        <item>Other interests</item>
        <item>Portfolio</item>
        <item>CV video</item>
        <item>Full name</item>
        <item>E-mail</item>
        <item>Birth date</item>
        <item>Sex</item>
        <item>Home address</item>
        <item>Military Service</item>
        <item>Drivers license</item>
        <item>Phone numbers</item>
        <item>Ability to relocate</item>
        <item>Ability to travel</item>
        <item>Distance work from home</item>
        <item>LinkedIn</item>
    </string-array>
    <string name="until_today">Until today</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="exit_message">Do you want to Exit Skywalker.gr?</string>
    <string name="logout_message">Do you want to log out from your profile?</string>
    <string name="delete_bio_warning">Do you want to delete the CV?</string>
    <string name="choose_file">Select file to upload</string>


    <string name="title_activity_profile">ActivityProfile</string>
    <string name="action_settings">Settings</string>
    <string name="hint_type_your_mobile_number">Type your mobile number</string>
    <string name="hint_type_your_country">Type your country</string>
    <string name="preview">Preview</string>
    <string name="preview_your_public_profile">Preview your public profile.</string>
    <string name="guest">Guest</string>
    <string name="activity_account">Activity Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attach_file">Attach file</string>
    <string name="not_allowed_upload_cv">You can not upload CV! Only 3 CVs are permitted!</string>
    <string name="upload_your_cv">Upload your CV on your profile</string>
    <string name="view_cv">View CV</string>

</resources>
