<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_main_login"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/gradient_animation"
tools:context=".Activities.ActivityLogin">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    tools:ignore="UselessParent">

    <RelativeLayout
        android:id="@+id/mainRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <ImageView
            android:id="@+id/imageView_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            android:src="@drawable/app_logo"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/button_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_trans"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView_logo"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/textView_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/already_have_an_account"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_login"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/username"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintAnimationEnabled="false"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_username"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/edit_text_box"
                            android:focusableInTouchMode="true"
                            android:fontFamily="sans-serif-light"
                            android:hint="@string/email"
                            android:importantForAutofill="no"
                            android:inputType="textEmailAddress"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="15sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/password1"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintAnimationEnabled="false"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_password"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/edit_text_box"
                            android:focusableInTouchMode="true"
                            android:fontFamily="sans-serif-light"
                            android:hint="@string/password"
                            android:importantForAutofill="no"
                            android:inputType="textPassword"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="15sp"
                            android:imeOptions="actionDone" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/button_forgot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorTransparent"
                        android:fontFamily="sans-serif"
                        android:text="@string/forgot_password"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:layout_gravity="end"/>


                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/button_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/login_now"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:onClick="btn_login"/>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_confirm"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/new_user"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/button_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_trans"
                    android:fontFamily="sans-serif-medium"
                    android:onClick="btn_signup"
                    android:text="@string/new_user_register_now"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:textStyle="bold"/>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/or_use_social_media"
                android:textColor="@color/black"
                android:layout_below="@+id/linearLayout3"
                android:layout_centerHorizontal="true"
                android:paddingTop="20dp"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/relativeLayout1"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/imageFacebook"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/facebook_logo"
                app:srcCompat="@drawable/facebook_logo" />
            <ImageView
                android:id="@+id/imageGoogle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/google_logo"
                app:srcCompat="@drawable/google_logo" />

            <ImageView
                android:id="@+id/imageLinkedin"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/linkedin"
                app:srcCompat="@drawable/linkedin_logo" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>



</RelativeLayout>